app/assets/stylesheets/application.css.scss
/* ... */
.pagination {
  display: none;
}

.infinite-container.infinite-loading:after {
  content:"Loading more...";
  text-transform: uppercase;
  line-height:30px;
  width: 100%;
  text-align:center;
  color: $green;
  visibility: visible;
  padding-top: 30px;
  margin-top: $grid-gutter-width / 2;
  background: image-url('ajax-loader.gif') no-repeat top white;
}

.col-xs-5ths,
.col-sm-5ths,
.col-md-5ths,
.col-lg-5ths {
  position: relative;
  min-height: 1px;
  padding-right: 10px;
  padding-left: 10px;
}

.col-xs-5ths {
  width: 20%;
  float: left;
}

@media (min-width: 768px) {
.col-sm-5ths {
    width: 20%;
    float: left;
  }
}

@media (min-width: 992px) {
  .col-md-5ths {
    width: 20%;
    float: left;
  }
}

@media (min-width: 1200px) {
  .col-lg-5ths {
    width: 20%;
    float: left;
  }
}

.styled-select {
  display: block;
  vertical-align: bottom;
  overflow: hidden;
  background: image-url('selectmenu-caret.png') no-repeat right white;
  border: 1px solid $dark-grey;

  select {
    display: block;
    background: transparent;
    padding: 0 18px 0 10px;
    line-height: 1;
    border: 0;
    border-radius: 0;
    -webkit-appearance: none;

    &.input-sm {
      height: ($input-height-small - 2);
    }
  }
}

.vehicle-selector {
  .styled-select {
    /* always show these boxes for fit-my-4x4 */
    display: block ! important;

    select {
      display: block ! important;
    }
  }
}

.panel.panel-info {
  background-color: $dark-grey;
  border-color: $dark-grey;
  color: white;
}

.green {
  color: $green;
}

.uppercase {
  text-transform: uppercase;
}

#errorExplanation {
  margin-bottom: $grid-gutter-width/2;
}

.stockists-search {
  &.navbar-form {
    float: right;
    margin-bottom: 10px;

    a.find-store {
      font-size: $font-size-medium;
      color: $dark-grey;
      text-transform: uppercase;

      &:hover {
        text-decoration: underline;
      }

      margin-right: 20px;
    }

    input.form-control {
      @include search-input;

      border-radius: 0;
      border-color: $dark-grey;
      background-color: $white;
      font-size: $font-size-smallish;
    }

    .btn {
      border-radius: 0;
      background-color: $green;
      border-color: $dark-grey;
      color: $white;
    }
  }
}

/* new class, so submit button in navbar can be grouped with search input */
.navbar-input-group {
  @media (min-width: $screen-sm) {
    font-size: 0px; /*removes whitespace between button and input*/

    input {
      border-top-right-radius: 0px;
      border-bottom-right-radius: 0px;
    }
    .btn {
      border-top-left-radius: 0px;
      border-bottom-left-radius: 0px;
      border-left: 0px;
    }
  }
  @media (max-width: $screen-xs-max) {
    margin-top: 0px;
    margin-bottom: 0px;

    .btn {
      width:100%;
    }
  }
}

#body {
  .inner {
    margin-top: $grid-gutter-width/2;
    margin-bottom: $grid-gutter-width/2;
  }
}

#site_bar_content {
  @media (max-width: $screen-xs-max) {
    width: 100% ! important;

    #editor_switch {
      padding-left: 10px;
    }

    #site_bar_branding {
      padding-right: 10px;
    }
  }
}

#layout-first-nav {
  font-size: $font-size-smallish;
  margin-bottom: 0;

  form {
    margin: 0;

    .navbar-form {
      margin-right: 0;
    }
  }

  .navbar-input-group {
    &.navbar-form {
      padding-right: 0;
    }

    input.form-control {
      @include search-input;

      border-radius: 0;
      border-color: $dark-grey;
      background-color: $white;
      font-size: $font-size-smallish;
    }

    .btn {
      border-radius: 0;
      background-color: $dark-grey;
      border-color: $dark-grey;
      color: $white;
    }

    ul {
      font-size: $font-size-smallish;
    }
  }
}

#layout-top-navigation {
  padding-right: 0;
}

#layout-second-nav {
  margin-bottom: 0;

  .logo {
    width: 244px;
    height: 116px;
    background-color: $white;
    text-indent: -99999px;
    background-image: image-url('nav_logo.png');
    vertical-align: top;
  }

  form {
    .form-group {
      display: inline-block;
      margin-bottom: 0;
      vertical-align: middle;
      margin-top: -7px;
    }

    &.navbar-form {
      .form-control {
        display: inline-block;
        width: auto;
        vertical-align: middle;
      }
    }

    &.navbar-input-group {
      font-size: 0px;

      .btn {
        width: auto;
        border-top-left-radius: 0px;
        border-bottom-left-radius: 0px;
        border-left: 0px;
        margin-top: -7px;
      }
    }
  }

  ul.sections {
    margin-top: 10px;
    margin-bottom: 0;
    list-style-type: none;
    padding: 0;
    float: left;
    position: relative;

    li {
      display: inline-block;
      text-align: center;
      width: 104px;
      text-transform: uppercase;
      font-size: $font-size-medium;

      &.wishlist {
        width: 124px;
      }

      &.nav-trigger {
        background: image-url('selectmenu-caret.png') no-repeat right transparent;
        padding-right: 18px;
      }

      a {
        display: block;
        color: $dark-grey;
        &:hover {
          text-decoration: underline;
        }
        position: relative;

        .badge {
          position: absolute;
          background-color: $green;
          color: $white;
          top: -9px;
          right: -1px;
        }
      }
    }

    ul.dropdown {
      position: absolute;
      background-color: rgba($white, 0.85);
      z-index: 10;
      padding: 13px 0 0 0;
      display: none;

      li {
        text-align: left;
        display: block;
        width: auto;
        border-bottom: 1px solid $green;

        a {
          color: $dark-grey;
          display: block;
          position: static;
          padding: 3px $grid-gutter-width/2;

          &:hover {
            background-color: $green;
            text-decoration: none;
            color: $white;
          }
        }
      }
    }
  }
}
/* ... */

